src/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

.swiper-button-next {
  @apply text-primary; /* Tailwind utility to set text color */
  @apply hover:text-slate-500; /* Hover effect */
}

/* Styling the previous button */
.swiper-button-prev {
  @apply text-primary; /* Tailwind utility to set text color */
  @apply hover:text-slate-500; /* Hover effect */
}

/* Optional: Increase size and customize further */
.swiper-button-next,
.swiper-button-prev {
  @apply text-2xl; /* Make the navigation buttons larger */
}

